<resources>
    <string name="app_name">EmergencyHelper</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="todo">todo</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="textview">TextView</string>
    <string name="medical_news">Medical News</string>
    <string name="logout">LOGOUT</string>
    <string name="medical_emergency">Medical Emergency</string>
    <string name="emergency">Emergency</string>
    <string name="medical_services">Medical Services</string>
    <string name="consult_doctor">Consult Doctor</string>
    <string name="enter_message">Enter Message (optional)</string>
    <string name="get_medical_emergency">Get medical Emergency</string>
    <string name="emergency_medical_team_reaching_your_location">Emergency Medical Team Reaching Your Location</string>
    <string name="add">+ Add</string>
    <string name="send_emergency">Send Emergency</string>
    <string name="emergency_message_is_sent_to_the_list">Emergency message is sent to the list</string>
    <string name="ask_a_doctor">Ask A Doctor</string>
    <string name="explain_the_problem">Explain the problem</string>
    <string name="select_department">Select Department</string>
    <string name="consult_doctor_will_be_get_back_to_you">The next available doctor will get back to you at the earliest.</string>
    <string name="main_news">main_news</string>
    <string name="description_news">description_news</string>
</resources>
